--- a/prepros-6.config
+++ b/prepros-6.config
@@ -51,7 +51,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
