week-2: svg + adaptive + map-section version 1

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,9 +5,10 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
+      "scss/settings",
+      "css",
       "scss",
-      "scss/blocks",
-      "scss/settings"
+      "scss/blocks"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -27,16 +28,17 @@
       "imports": [
         "scss/settings/_normalize.scss",
         "scss/settings/_fonts.scss",
+        "scss/settings/_media.scss",
         "scss/settings/_mixins.scss",
         "scss/settings/_vars.scss",
         "_layout.scss",
+        "scss/blocks/_icons.scss",
         "scss/blocks/_header.scss",
         "scss/blocks/_nav.scss",
         "scss/blocks/_main-page.scss",
         "scss/blocks/_buttons.scss",
         "scss/blocks/_features.scss",
         "scss/blocks/_feature.scss",
-        "scss/blocks/_icons.scss",
         "scss/blocks/_phone.scss",
         "scss/blocks/_why.scss",
         "scss/blocks/_benefits.scss",
@@ -46,12 +48,15 @@
         "scss/blocks/_order.scss",
         "scss/blocks/_form.scss",
         "scss/blocks/_radio.scss",
-        "scss/blocks/_fixed-menu.scss"
+        "scss/blocks/_contacts.scss",
+        "scss/blocks/_footer.scss",
+        "scss/blocks/_social.scss",
+        "scss/blocks/_page-dots.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
